[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "pynextsms"
version     = "1.0.0"
description = "Python SDK for the messaging-service.co.tz SMS API v2"
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "Ronald Gosso", email = "ronaldgosso@gmail.com" }]
keywords    = ["sms", "tanzania", "messaging", "api", "sdk", "pynextsms"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies    = ["requests>=2.28"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "types-requests",
]

[project.urls]
Homepage      = "https://github.com/ronaldgosso/pynextsms"
Documentation = "https://github.com/ronaldgosso/pynextsms#readme"
Repository    = "https://github.com/ronaldgosso/pynextsms"
"Bug Tracker" = "https://github.com/ronaldgosso/pynextsms/issues"
Changelog     = "https://github.com/ronaldgosso/pynextsms/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["pynextsms*"]

[tool.setuptools.package-data]
pynextsms = ["py.typed"]

# ── Tool configuration ───────────────────────────────────────────────────────

[tool.black]
line-length    = 100
target-version = ["py38"]

[tool.ruff]
line-length    = 100
target-version = "py38"
select         = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore         = ["E501"]

[tool.mypy]
python_version      = "3.8"
strict              = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short -v"

[tool.coverage.run]
source = ["pynextsms"]
omit   = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under   = 90
